--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <body class="flex-container">
 			<div class="flex-header" id="header">
 			</div>
-			<!-- <iframe id="page" class="flex-fill" frameBorder="1"></iframe> -->
+			<iframe id="page" class="flex-fill" frameBorder="1"></iframe>
         </body>
 </html>
