--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		</head>
 
         <body class="flex-container">
-			<div class="flex-header" id="header">
+			<!-- <div class="flex-header" id="header">
 			</div>
-			<iframe id="page" class="flex-fill" frameBorder="1"></iframe>
+			<iframe id="page" class="flex-fill" frameBorder="1"></iframe> -->
         </body>
 </html>
