--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 			<link rel="stylesheet" href="stylesheets/style.css">
 		</head>
 
-        <body class="flex-container">
-			<!-- <div class="flex-header" id="header">
-			</div>
-			<iframe id="page" class="flex-fill" frameBorder="1"></iframe> -->
+        <body>
         </body>
 </html>
